--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
+<head>
+    <title>To Do List</title>
+</head>
+<body>
+    <h1>All Local Cuisines</h1>
 
-    </body>
+    <p>Add a new cuisine:</p>
+
+    <form action="/cuisines" method="post">
+        <label for="type">Cuisine type:</label>
+        <input id="type" name="type" type="text">
+
+        <button type="submit">Add</button>
+    </form>
+
+    {% if cuisines is not empty %}
+        <p>Here are all your cuisines:</p>
+        <ul>
+            {% for cuisine in cuisines %}
+                <li><a href="/cuisine/{{ cuisine.getId }}">{{ cuisine.getName }}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+      <p>There are no cuisines yet, add some!</p>
+    {% endif %}
+
+</body>
 </html>
