--- a/views/cuisine.html.twig
+++ b/views/cuisine.html.twig
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title></title>
-    </head>
-    <body>
+<head>
+    <title>{{ cuisine.getType }}</title>
+</head>
+<body>
+    <h1>{{ cuisine.getType }}</h1>
 
-    </body>
+    {% if restaurants is not empty %}
+        <p>Here are all your restaurants:</p>
+        <ul>
+            {% for restaurant in restaurants %}
+                <li><a href="/restaurant/{{ restaurant.getId }}">{{ restaurant.getName }}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+      <p>There are no restaurants yet, add some!</p>
+    {% endif %}
+
+    <h4>Add a restaurant</h4>
+
+    <form action='/restaurants' method='post'>
+        <input id="cuisine_id" name="cuisine_id" type="hidden" value="{{ cuisine.getId() }}">
+        <label for='name'>Name</label>
+        <input id='name' name='name' type='text'>
+
+        <label for="address">Address</label>
+        <input type="text" name="address">
+
+        <label for="description">Description</label>
+        <input type="text" name="description">
+
+        <button type='submit'>Add Restaurant</button>
+    </form>
+
+    <p><a href='/'>Home</a></p>
+</body>
 </html>
