--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <title>To Do List</title>
+    <title>Food Finder</title>
 </head>
 <body>
-    <h1>All Local Cuisines</h1>
+    <h1>Check out these cuisines</h1>
 
     <p>Add a new cuisine:</p>
 
@@ -11,14 +11,14 @@
         <label for="type">Cuisine type:</label>
         <input id="type" name="type" type="text">
 
-        <button type="submit">Add</button>
+        <button type="submit">Add Cuisine</button>
     </form>
 
     {% if cuisines is not empty %}
         <p>Here are all your cuisines:</p>
         <ul>
             {% for cuisine in cuisines %}
-                <li><a href="/cuisine/{{ cuisine.getId }}">{{ cuisine.getName }}</a></li>
+                <li><a href="/cuisine/{{ cuisine.getId }}">{{ cuisine.getType }}</a></li>
             {% endfor %}
         </ul>
     {% else %}
