--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -18,11 +18,20 @@
         <p>Here are all your cuisines:</p>
         <ul>
             {% for cuisine in cuisines %}
-                <li><a href="/cuisine/{{ cuisine.getId }}">{{ cuisine.getType }}</a></li>
+                <li><a href="/cuisine/{{ cuisine.getId }}">{{ cuisine.getType }}</a><a href='/cuisines/{{ cuisine.getId }}/edit'>edit</a></li>
             {% endfor %}
         </ul>
     {% else %}
       <p>There are no cuisines yet, add some!</p>
+    {% endif %}
+
+    {% if form %}
+        <form action="/cuisines" method="post">
+            <input name="_method" type="hidden" value="patch">
+            <input name="current_cuisineId" type="hidden" value="{{ current_cuisine.getId() }}">
+            <input type="text" name="type">
+            <button type="submit" name="button">Edit Name</button>
+        </form>
     {% endif %}
 
 </body>
