--- a/views/restaurant.html.twig
+++ b/views/restaurant.html.twig
@@ -10,7 +10,12 @@
         <ol>
             {% for review in reviews %}
                 <li>
-                <p>Name: {{ review.getName }}<a href="/review/{{ restaurant.getId }}/{{ review.getId }}/edit_form">edit name</a></p>
+                <p>Name: {{ review.getName }}<a href="/review/{{ restaurant.getId }}/{{ review.getId }}/edit_form">edit name</a>
+                    <form action="/reviews/{{ restaurant.getId }}/{{ review.getId }}" method="post">
+                        <input name="_method" type="hidden" value="delete">
+                        <button type="submit">Delete this category</button>
+                    </form>
+                </p>
                 <p>Rating: {{ review.getRating }}</p>
                 <p>Comments: {{ review.getComments }}</p>
                 </li>
