--- a/views/restaurant.html.twig
+++ b/views/restaurant.html.twig
@@ -1,5 +1,7 @@
 <html>
 <head>
+    <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+    <link rel="stylesheet" href="css/styles.css" media="screen">
     <title>{{ restaurant.getName }}</title>
 </head>
 <body>
