--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -1,46 +1,47 @@
 <html>
-<head>
+  <head>
     <link href="/css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+    <link href='https://fonts.googleapis.com/css?family=Laila' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/styles.css" media="screen">
     <title>Food Finder</title>
-</head>
-<body>
-  <div class="container">
-    <h1>Check out these cuisines</h1>
+  </head>
+  <body>
+    <div class="jumbotron">
+      <h1>Best Restaurants in Town!</h1>
+    </div>
+    <div class="container">
+      <form action="/cuisines" method="post">
+      <label class for="type">Cuisine type:</label>
+      <input id="type" name="type" type="text">
 
-    <p>Add a new cuisine:</p>
+      <button type="submit">Add Cuisine Type</button>
+      </form>
 
-    <form action="/cuisines" method="post">
-        <label for="type">Cuisine type:</label>
-        <input id="type" name="type" type="text">
-
-        <button type="submit">Add Cuisine</button>
-    </form>
-
-    {% if cuisines is not empty %}
+      {% if cuisines is not empty %}
         <p>Here are all your cuisines:</p>
         <ul>
             {% for cuisine in cuisines %}
-                <li><a href="/cuisine/{{ cuisine.getId }}">{{ cuisine.getType }}</a><br><br><button class="btn btn-sm"><a href='/cuisines/{{ cuisine.getId }}/edit_form'>Edit</a></button><br><br>
-                    <form action="/cuisines/{{ cuisine.getId }}/delete" method="post">
-                        <input name="_method" type="hidden" value="delete">
-                        <button class="btn btn-sm" type="submit">Delete</button>
-                    </form>
+                <li>
+                <a href="/cuisine/{{ cuisine.getId }}">{{ cuisine.getType }}</a><br><button class="btn btn-sm"><a href='/cuisines/{{ cuisine.getId }}/edit_form'>Edit</a></button>
+                <form action="/cuisines/{{ cuisine.getId }}/delete" method="post">
+                <input name="_method" type="hidden" value="delete">
+                <button class="btn btn-sm" type="submit">Delete</button>
+                </form>
                 </li>
             {% endfor %}
-        </ul>
-    {% else %}
-      <p>There are no cuisines yet, add some!</p>
-    {% endif %}
+          </ul>
+          {% else %}
+          <h3>There are no cuisines yet, add some!</h3>
+      {% endif %}
 
-    {% if form %}
-        <form action="/cuisines/updated" method="post">
-            <input name="_method" type="hidden" value="patch">
-            <input name="current_cuisineId" type="hidden" value="{{ current_cuisine.getId() }}">
-            <input type="text" name="type">
-            <button type="submit" name="button">Edit Name</button>
-        </form>
-    {% endif %}
-  </div>
-</body>
+      {% if form %}
+      <form action="/cuisines/updated" method="post">
+      <input name="_method" type="hidden" value="patch">
+      <input name="current_cuisineId" type="hidden" value="{{ current_cuisine.getId() }}">
+      <input type="text" name="type">
+      <button type="submit" name="button">Edit Name</button>
+      </form>
+      {% endif %}
+    </div>
+  </body>
 </html>
