--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -22,7 +22,8 @@
         <ul>
             {% for cuisine in cuisines %}
                 <li>
-                <a href="/cuisine/{{ cuisine.getId }}">{{ cuisine.getType }}</a><br><button><a href='/cuisines/{{ cuisine.getId }}/edit_form'>Edit</a></button>
+                <a href="/cuisine/{{ cuisine.getId }}">{{ cuisine.getType }}</a><br>
+                <button><a href='/cuisines/{{ cuisine.getId }}/edit_form'>Edit</a></button>
                 <form action="/cuisines/{{ cuisine.getId }}/delete" method="post">
                 <input name="_method" type="hidden" value="delete">
                 <button type="submit">Delete</button>
