--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -3,10 +3,6 @@ li {
   color: #1f323c;
 }
 
-.btn {
-  margin-bottom: 6px;
-}
-
 .jumbotron {
   text-align: center;
   font-weight: bold;
@@ -25,6 +21,7 @@ body {
 button {
   background-color: #c0884d;
   font-size:13px;
+  margin-bottom: 4px;
 }
 
 input {
@@ -33,8 +30,14 @@ input {
 
 label {
   font-size: 21px;
+  margin-left: 4px;
+  margin-right: 10px:
 }
 
 a {
   color: #1f323c;
+}
+
+.restaurant-detail {
+  font-size: 17px;
 }
