--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -12,7 +12,7 @@
     <div class="container">
       <form action="/cuisines" method="post">
       <label class for="type">Cuisine: </label>
-      <input id="type" name="type" type="text">
+      <input id="type" name="type" type="text" required>
 
       <button type="submit">Add Cuisine Type</button>
       </form>
